updated mars component so that image grabbed from API is larger on smaller screens for better UX, attempted to address reload issues when refreshing on production and not on home page

--- a/client/src/components/Mars/style.css
+++ b/client/src/components/Mars/style.css
@@ -177,6 +177,9 @@ svg {
   .col-md-12 {
     margin-bottom: 2rem;
   }
+  #rolling-photos {
+    width: 100%;
+  }
 }
 
 @media (max-width: 908px) {
